[package]
name = "microfft"
version = "0.1.0"
authors = ["Jan Teske <jteske@posteo.net>"]
description = "Embedded-friendly Fast Fourier Transforms"
repository = "https://gitlab.com/ra_kete/microfft-rs"
readme = "README.md"
keywords = ["fft", "dft", "fourier"]
categories = ["algorithms", "embedded", "no-std", "science"]
license = "MIT"
edition = "2018"

[dependencies]
static_assertions = "1"

[dependencies.num-complex]
version = "0.2"
default-features = false

[dev-dependencies]
rustfft = "3"

[badges]
gitlab = { repository = "ra_kete/microfft-rs" }
