[package]
name = "microfft"
version = "0.3.0"
authors = ["Jan Teske <jteske@posteo.net>"]
description = "Embedded-friendly Fast Fourier Transforms"
repository = "https://gitlab.com/ra_kete/microfft-rs"
readme = "README.md"
keywords = ["fft", "dft", "fourier"]
categories = ["algorithms", "embedded", "no-std", "science"]
license = "MIT"
edition = "2018"

[dependencies]
static_assertions = "1"

[dependencies.num-complex]
version = "0.2"
default-features = false

[dev-dependencies]
rustfft = "3"

[features]
default = ["maxn-4096"]
bitrev-tables = []
maxn-4 = []
maxn-8 = []
maxn-16 = []
maxn-32 = []
maxn-64 = []
maxn-128 = []
maxn-256 = []
maxn-512 = []
maxn-1024 = []
maxn-2048 = []
maxn-4096 = []

[badges]
gitlab = { repository = "ra_kete/microfft-rs" }
