[package]
name = "bench"
version = "0.1.0"
authors = ["Jan Teske <jteske@posteo.net>"]
edition = "2018"

[dependencies]
cortex-m = "0.6"
cortex-m-rt = "0.6"
cortex-m-semihosting = "0.3"
heapless = "0.5"
panic-semihosting = "0.5"

[dependencies.hal]
version = "0.4"
package = "stm32f3xx-hal"
features = ["stm32f303"]

[dependencies.num-complex]
version = "0.2"
default-features = false

[dependencies.microfft]
path = ".."

[dependencies.fourier]
git = "https://github.com/calebzulawski/fourier.git"
default-features = false

[dependencies.fourier-algorithms]
git = "https://github.com/calebzulawski/fourier.git"
default-features = false

[profile.release]
codegen-units = 1
lto = true
